# MNEMOS-AI

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
core/: boot.md  memory-map.md
runner/: README.md  __init__.py  actions.py  audit.py  cli.py  model.py  notion_read.py  orchestrator.py  registry.py  router.py  verify.py
runner/adapters/: README.md  __init__.py  base.py  integrations.py  outbox.py
runner/specialists/: concierge.json  decision.json  governance-scan.json  write-checkpoint.json
runner/tests/: test_actions.py  test_adapters.py  test_decision.py  test_handoff.py  test_integrations.py  test_model.py  test_notion_read.py  test_registry.py  test_runner.py  test_verify.py
security/: README.md  __init__.py  limits.py  secrets.py  validate.py
security/tests/: test_security.py
vault/: INDEX.md
vault/02-projects/: EXAMPLE.md
vault/03-jobs/: concierge.md  decision.md  governance-scan.md  write-checkpoint.md
vault/04-resources/: daily-note.template.md  evidence-citation.md
visualizer/: __init__.py  __main__.py  index.html  server.py
visualizer/tests/: test_visualizer.py
voice/: README.md  __init__.py  __main__.py  loop.py  stt.py  tts.py
voice/tests/: test_audio_wiring.py  test_persona.py  test_voice.py
webui/: __init__.py  __main__.py  index.html  manifest.webmanifest  server.py  sw.js
webui/tests/: test_webui.py
